updated reg stuff

--- a/app/views/create-event/preview.html
+++ b/app/views/create-event/preview.html
@@ -167,6 +167,7 @@
                     <p class="link-style"><a href="https://www.google.co.uk/maps/place/University+of+Exeter+Innovation+Centre/@50.7384791,-3.5323014,17z/data=!3m1!4b1!4m5!3m4!1s0x486da4430cc4d16f:0xec0fc5491010f1f4!8m2!3d50.7384791!4d-3.5301074">View on a map</a></p>
                     <p>{{ data['venue-additional-notes'] }}</p>
                 </div>
+            </details>
       </div>
 
 
