updated images and reg content

--- a/app/views/create-event/preview.html
+++ b/app/views/create-event/preview.html
@@ -41,7 +41,7 @@
         <div style="display: flex; align-items:flex-start; flex-direction: row; ">
 
             <div style="width:32%; background-color: #F5F2ED; border: 1px solid #DFD5C5;  padding: 12px 5px 12px 5px; margin-bottom:30px; margin-right:45px; ">
-                <h4 style="font-size:16px; margin-bottom:3px;" align="center">Sectors</h4>
+                <h4 style="font-size:16px; margin-bottom:3px;" align="center">Industry</h4>
                 <p class="bold" style="white-space: pre-wrap; font-size:16px; margin: 0px;" align="center">{{ data['sectors'] }}</p>
             </div>
 
