--- a/app/views/register/additional-questions.html
+++ b/app/views/register/additional-questions.html
@@ -108,7 +108,8 @@
 			<div class="" id="details-content-0" aria-hidden="true"
 				 style="margin-top:0px; margin-bottom:30px; padding: 10px 0px 10px 15px; border-left:5px; border-style: solid;  border-left-color: #999">
 
-				<p style="white-space: pre-wrap; margin-bottom:5px">This information helps us to better understand who will be attending this event. We may use it to tailor event content around your needs, to check that this event is a good match for you, or to cater for any special requirements you have.</p>
+				<p style="white-space: pre-wrap; margin-bottom:5px">This information helps us to better understand who will be attending this event.
+					<br>We may use it to tailor event content around your needs, to check that this event is a good match for you, or to cater for any special requirements you have.</p>
 			</div>
 		</details>
 
