--- a/app/views/register/index.html
+++ b/app/views/register/index.html
@@ -12,7 +12,7 @@
 
 <main id="content" role="main">
 	  <h1 class="heading-large" >
-		  Your business details
+		  Your business
       </h1>
   <div class="grid-row">
     <div class="column-two-thirds">
@@ -168,7 +168,7 @@
 
 		  <div class="form-group {% if errorQuestionEmpty%} form-group-error {% endif %}">
 					  <label class="form-label" for="question">
-						  Company website (optional) 
+						  Business website (optional)
 						  {% if errorQuestionEmpty %}
 									<span class="error-message">
 										Attendee question missing
