--- a/app/views/register/ticket-details.html
+++ b/app/views/register/ticket-details.html
@@ -166,9 +166,7 @@
 
 				  <div class="form-group form-control-2-3 {% if errorQuestionEmpty%} form-group-error {% endif %}">
 
-					  <div style="border-left:5px solid #bfc1c3; padding:15px; margin-bottom:15px">
-						  You'll receive registration confirmation and event updates on the email address you provided.
-					  </div>
+
 
 					  <label class="form-label" for="question">
 						  Email address
@@ -182,6 +180,9 @@
 					  <div id="show-new-question" style="width:100%;  margin-bottom:0px;">
 						  <input type="text" class="form-control  {% if errorQuestionEmpty %} form-control-error {% endif %}"
 								 id="email-address" name="email-address" value="" style="width:80%;">
+					  </div>
+					  <div style="border-left:5px solid #bfc1c3; padding:15px; margin-top:5px">
+						  Used for registration confirmation and event updates.
 					  </div>
 				  </div>
 
@@ -212,7 +213,7 @@
 
 				  <div class="form-group form-control-2-3" style="margin-bottom:15px; ">
 					  <label class="form-label" for="questio">
-						  Would you also like to get text updates about this event on your mobile phone?
+						  Would you also like to get text updates about this event?
 					  </label>
 					  <fieldset class="inline">
 						  <div class="multiple-choice" data-target="enter-phone">
