updated sector title

--- a/app/views/register/business-sector.html
+++ b/app/views/register/business-sector.html
@@ -40,7 +40,7 @@
 	{% endif %}
 
 	<h1 class="heading-large" >
-		Which one of the following list items best describes the work you do?
+		Which sector do you work in?
     </h1>
 
 
