--- a/app/views/create-event/attendees.html
+++ b/app/views/create-event/attendees.html
@@ -54,8 +54,10 @@
 			  <li>full business address</li>
 			  <li>phone number</li>
 			  <li>email address</li>
-			  <li>primary sector of company</li>
+			  <li>primary sector of business</li>
 			  <li>company website (optional)</li>
+			  <li>annual turnover</li>
+			  <li>export experience level</li>
 		  </ul>
 
 		  <br>
