--- a/app/views/register/business-sector.html
+++ b/app/views/register/business-sector.html
@@ -39,7 +39,7 @@
 		</div>
 	{% endif %}
 
-	<h1 class="heading-large" >
+	<h1 class="heading-large"  style="font-weight:400;">
 		Which sector do you work in?
     </h1>
 
