--- a/app/views/create-event/preview.html
+++ b/app/views/create-event/preview.html
@@ -38,31 +38,52 @@
         <br/>
           <br/>
 
-        <div style="display: flex; align-items:flex-start; flex-direction: row; ">
+        <div style="display: flex; align-items:flex-start; flex-direction: row; flex-flow: row wrap;">
 
-            <div style="width:32%; background-color: #F5F2ED; border: 1px solid #DFD5C5;  padding: 12px 5px 12px 5px; margin-bottom:30px; margin-right:45px; ">
-                <h4 style="font-size:16px; margin-bottom:3px;" align="center">Industry</h4>
-                <p class="bold" style="white-space: pre-wrap; font-size:16px; margin: 0px;" align="center">{{ data['sectors'] }}</p>
-            </div>
+            {% if data['event-title'] == "Doing business in Germany - retail"  %}
 
-            <div style="width:32%; background-color: #F5F2ED; border: 1px solid #DFD5C5;  padding: 12px 5px 12px 5px; margin-bottom:30px; margin-right:45px;">
-                <h4 style="font-size:16px; margin-bottom:5px;" align="center">Markets</h4>
-                <p class="bold" style="white-space: pre-wrap; font-size:16px; margin: 0px;" align="center">{{ data['markets'] }}</p>
-            </div>
+                <div style="min-height:230px; flex: 1;  padding: 12px 5px 12px 5px; margin-bottom:30px; margin-right:45px; ">
+                    <h4 class="bold" style="font-size:16px; margin-bottom:10px;" align="">Sectors</h4>
+                    <p  style="white-space: pre-wrap; font-size:16px; margin: 0px;" align="">{{ data['sectors'] }}</p>
+                </div>
+
+                <div style="flex: 1;">
+                    <div style="padding: 12px 5px 12px 5px; margin-bottom:30px; margin-right:0px;">
+                        <h4 class="bold" style="font-size:16px; margin-bottom:5px;" align="">Markets</h4>
+                        <p  style="white-space: pre-wrap; font-size:16px; margin: 0px;" align="">{{ data['markets'] }}</p>
+                    </div>
+
+                    <div style="  padding: 12px 5px 12px 5px; margin-bottom:30px; margin-right:0px;">
+                        <h4 class="bold" style="font-size:16px; margin-bottom:5px;" align="">Export experience</h4>
+                        <p  style="white-space: pre-wrap; font-size:16px; margin: 0px;" align="">{{ data['audience-experience'] }}</p>
+                    </div>
+                </div>
 
 
-            <div style="width:32%; background-color: #F5F2ED; border: 1px solid #DFD5C5;  padding: 12px 5px 12px 5px; margin-bottom:30px; margin-right:0px;">
-                <h4 style="font-size:16px; margin-bottom:3px;" align="center">Export experience</h4>
-                <p class="bold" style="white-space: pre-wrap; font-size:16px; margin: 0px;" align="center">{{ data['audience-experience'] }}</p>
-            </div>
+            {% else %}
+                <div style="width:32%; background-color: #F5F2ED; border: 1px solid #DFD5C5;  padding: 12px 5px 12px 5px; margin-bottom:30px; margin-right:45px; ">
+                    <h4 style="font-size:16px; margin-bottom:5px;" align="center">Sectors</h4>
+                    <p class="bold" style="white-space: pre-wrap; font-size:16px; margin: 0px;" align="center">{{ data['sectors'] }}</p>
+                </div>
+
+                <div style="width:32%; background-color: #F5F2ED; border: 1px solid #DFD5C5;  padding: 12px 5px 12px 5px; margin-bottom:30px; margin-right:45px;">
+                    <h4 style="font-size:16px; margin-bottom:5px;" align="center">Markets</h4>
+                    <p class="bold" style="white-space: pre-wrap; font-size:16px; margin: 0px;" align="center">{{ data['markets'] }}</p>
+                </div>
+
+                <div style="width:32%; background-color: #F5F2ED; border: 1px solid #DFD5C5;  padding: 12px 5px 12px 5px; margin-bottom:30px; margin-right:0px;">
+                    <h4 style="font-size:16px; margin-bottom:5px;" align="center">Export experience</h4>
+                    <p class="bold" style="white-space: pre-wrap; font-size:16px; margin: 0px;" align="center">{{ data['audience-experience'] }}</p>
+                </div>
+
+            {% endif %}
 
         </div>
 
 
-
           <br/>
           <div style="display: flex; flex-direction: row;" >
-              <a href="/register" class="button button-blue">Register</a>
+              <a href="/register-for-event" class="button button-blue">Register</a>
               <p style="padding-top:15px; margin-left: 25px; margin-bottom:0px; font-family: arial, helvetica, sans-serif; font-weight: 500; font-size: 18px;">Free event</p>
           </div>
 
@@ -93,7 +114,7 @@
 
               <br/>
               <div style="display: flex; flex-direction: row;" >
-                  <a href="/register" class="button button-blue">Register</a>
+                  <a href="/register-for-event" class="button button-blue">Register</a>
                   <p style="padding-top:15px; margin-left: 25px; margin-bottom:0px; font-family: arial, helvetica, sans-serif; font-weight: 500; font-size: 18px;">Free event</p>
               </div>
 
@@ -187,8 +208,6 @@
               <li>Email: {{ data['contact-email'] }}</li>
           </ul>
       </div>
-
-
 
 
     </div>
