--- a/app/views/create-event/summary.html
+++ b/app/views/create-event/summary.html
@@ -359,6 +359,28 @@
 				  </dd>
 			  </div>
 
+			  <div>
+				  <dt class="cya-question">
+					  Default questions
+				  </dt>
+				  <dd class="cya-answer" style="">
+					  <ul class="list list-bullet">
+						  <li>full name</li>
+						  <li>job title</li>
+						  <li>business  name</li>
+						  <li>full business address</li>
+						  <li>phone number</li>
+						  <li>email address</li>
+						  <li>primary sector of business</li>
+						  <li>company website (optional)</li>
+						  <li>annual turnover</li>
+						  <li>export experience level</li>
+					  </ul>
+				  </dd>
+				  <dd class="cya-change">  </dd>
+			  </div>
+
+
 
 			  {% if session.questionsData.length == 0  %}
 				  <div>
