--- a/app/views/register/business-address.html
+++ b/app/views/register/business-address.html
@@ -11,7 +11,7 @@
 {% include "includes/great-header.html" %} 
 
 <main id="content" role="main">
-	  <h1 class="heading-large" >
+	  <h1 class="heading-large"  style="font-weight:400;">
 		  Your business address
       </h1>
   <div class="grid-row">
