preview page fixes and scenario 5 added

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -32,6 +32,8 @@
         <li><a href="/scenario-3">Event details page example (food and drink)</a></li>
         <br/>
         <li><a href="/scenario-4">Event details page example (Germany - retail)</a></li>
+        <br/>
+        <li><a href="/scenario-5">Event details page example (Sports technology in France)</a></li>
       </ul>
 
       <br>
