--- a/app/views/create-event/preview.html
+++ b/app/views/create-event/preview.html
@@ -40,7 +40,7 @@
 
         <div style="display: flex; align-items:flex-start; flex-direction: row; flex-flow: row wrap;">
 
-            {% if data['event-title'] == "Doing business in Germany - retail"  %}
+            {% if data['event-title'] == "Doing business in Germany - retail" or  data['event-title'] == "Sports technology in France" %}
 
                 <div style="min-height:230px; flex: 1;  padding: 12px 5px 12px 5px; margin-bottom:30px; margin-right:45px; ">
                     <h4 class="bold" style="font-size:16px; margin-bottom:10px;" align="">Sectors</h4>
@@ -94,9 +94,11 @@
                 <h4 class="bold-small">Event outcomes</h4>
                 <ul class="list push--bottom">
                     {% for key,value in data %}
-                    {% if 'benefit-input-' in key %}
-                    <li class="list-item">{{ value }}</li>
-                    {% endif %}
+                        {% if 'benefit-input-' in key %}
+                            {% if value != "" %}
+                                <li class="list-item">{{ value }}</li>
+                            {% endif %}
+                        {% endif %}
                     {% endfor %}
                 </ul>
             </div>
