--- a/app/views/index.html
+++ b/app/views/index.html
@@ -34,6 +34,8 @@
         <li><a href="/scenario-4">Event details page example (Germany - retail)</a></li>
         <br/>
         <li><a href="/scenario-5">Event details page example (Sports technology in France)</a></li>
+        <br/>
+        <li><a href="/scenario-6">Sell your products and services overseas</a></li>
       </ul>
 
       <br>
