updayed reminder emails

--- a/app/views/create-event/template-reg.html
+++ b/app/views/create-event/template-reg.html
@@ -68,7 +68,7 @@
 			  <p style="margin-left:5px; margin-top:5px; margin-bottom:40px;">  {{ data['venue-additional-notes'] }} </p>
 		  {% endif %}
 
-		  <p>{{ data['organiser-name'] }}
+		  <p style="margin-left:5px;" >{{ data['organiser-name'] }}
 			 <br> {{ data['contact-email'] }}
 			 <br> {{ data['contact-phone'] }}
 		  </p>
