added manufacturing event page

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -36,6 +36,8 @@
         <li><a href="/scenario-5">Event details page example (Sports technology in France)</a></li>
         <br/>
         <li><a href="/scenario-6">Sell your products and services overseas</a></li>
+        <br/>
+        <li><a href="/scenario-7">Manufacturing and engineering</a></li>
       </ul>
 
       <br>
