--- a/app/views/register/confirmation-page.html
+++ b/app/views/register/confirmation-page.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
-{% set loggedIn = true %}
+{% if loggedIn == undefined %}
+{% set loggedIn = false %}
+{% endif %}
 {% set external_journey = true %}
 
 {% block page_title %}
@@ -59,6 +61,7 @@
 
       <p>You can print this confirmation or <a class="link" href="#">download a PDF</a>.</p>
 
+      <div style="border-left:6px solid #CCC; padding:14px 10px">We’ve also created a new account and sent the details via email. <br />Please verify your email to access your account.</div>
       <h2 class="heading-medium">What happens next</h2>
       <p>Updates and reminders containing further details and instructions will be sent out closer to the day of your event, so do keep an eye on your inbox.</p>
       <p>On the day of the event, you'll just need to provide your confirmation number in order to check-in.</p>
