--- a/app/views/includes/great-header.html
+++ b/app/views/includes/great-header.html
@@ -84,15 +84,24 @@ main#content {max-width: 1200px}
             <li class="float--left soft-half--right"><a class="logo-hmg" href="https://www.gov.uk/" title="Go to the GOV.UK homepage"><img src="/public/great-library/images/hm_government_logo_horizontal.svg" alt="HM Government logo"></a></li>
             <li class="float--left soft-half--left"><a class="link link--white" href="https://great.gov.uk" title="part of great.gov.uk"><span class="hide-mobile font-light-grey font-light">Part of </span><span class="font-regular">great.gov.uk</span></a></li>
           </ul>
-
+{% if loggedIn == false and external_journey == true %}
           <ul class="list-inline list-separators float--right navigation-login font-regular" id="sso-signin">
-            <li class="float--left soft-half--right"><a class="link--white" href="https://sso.trade.great.gov.uk/accounts/login/" title="Sign in"><i class="icon icon--left icon-sign-in" style="background-image: url(/public/great-library/images/icons/signin.svg)"></i><span class="hide-mobile">Sign in</span></a></li>
-            <li class="float--left soft-half--left hide-mobile"><a class="link--white" href="https://sso.trade.great.gov.uk/accounts/signup/" title="Register"><span>Register</span></a></li>
+            <li class="float--left soft-half--right"><a class="link--white" href="/register/sign-in" title="Sign in"><i class="icon icon--left icon-sign-in" style="background-image: url(/public/great-library/images/icons/signin.svg)"></i><span class="hide-mobile">Sign in</span></a></li>
+            <li class="float--left soft-half--left hide-mobile"><a class="link--white" href="https://sso.trade.great.gov.uk/accounts/signup/" title="Register"><span>Test</span></a></li>
           </ul>
           <ul class="list-inline list-separators float--right navigation-login font-regular" id="sso-signout" style="display:none">
             <li class="float--left soft-half--right"><a class="link--white" href="https://profile.great.gov.uk/export-opportunities/applications/" title="Profile"><i class="icon icon--left icon-sign-in" style="background-image: url(/public/great-library/images/icons/signout.svg)"></i><span class="hide-mobile">Profile</span></a></li>
+            <li class="float--left soft-half--left hide-mobile"><a class="link--white" href="https://sso.trade.great.gov.uk/accounts/logout/" title="Register"><span>Test out</span></a></li>
+          </ul>
+{% elif loggedIn == true and external_journey == true %}
+            
+          <ul class="list-inline list-separators float--right navigation-login font-regular" id="sso-signout">
+            
+            <li class="float--left soft-half--right"> <a class="link--white" href="https://profile.great.gov.uk/export-opportunities/applications/" title="Profile"><span class="hide-mobile">Profile</span></a></li>
             <li class="float--left soft-half--left hide-mobile"><a class="link--white" href="https://sso.trade.great.gov.uk/accounts/logout/" title="Register"><span>Sign out</span></a></li>
           </ul>
+          <div class="float--right soft-half--right"> <a class="link--white" href="#" title="Profile"><span class="hide-mobile">Hi user@email.co.uk</span></div>
+{% endif %}
         </div>
       </div>
       <div class="background--great-blue">
