update to email displayed in header

--- a/app/views/includes/great-header.html
+++ b/app/views/includes/great-header.html
@@ -100,7 +100,7 @@ main#content {max-width: 1200px}
             <li class="float--left soft-half--right"> <a class="link--white" href="https://profile.great.gov.uk/export-opportunities/applications/" title="Profile"><span class="hide-mobile">Profile</span></a></li>
             <li class="float--left soft-half--left hide-mobile"><a class="link--white" href="https://sso.trade.great.gov.uk/accounts/logout/" title="Register"><span>Sign out</span></a></li>
           </ul>
-          <div class="float--right soft-half--right"> <a class="link--white" href="#" title="Profile"><span class="hide-mobile">Hi user@email.co.uk</span></div>
+          <div class="float--right soft-half--right"> <a class="link--white" href="#" title="Profile"><span class="hide-mobile">Hi {{ data['email-address'] }}</span></div>
 {% endif %}
         </div>
       </div>
