--- a/app/views/index.html
+++ b/app/views/index.html
@@ -27,13 +27,13 @@
       <ul>
         <li><a href="/scenario-1">Scenario one</a></li>
         <br/>
-        <li><a href="/scenario-2">Event details page example (generic)</a></li>
+        <li><a href="/scenario-2">Generic</a></li>
         <br/>
-        <li><a href="/scenario-3">Event details page example (food and drink)</a></li>
+        <li><a href="/scenario-3">Food and drink</a></li>
         <br/>
-        <li><a href="/scenario-4">Event details page example (Germany - retail)</a></li>
+        <li><a href="/scenario-4">Germany - retail</a></li>
         <br/>
-        <li><a href="/scenario-5">Event details page example (Sports technology in France)</a></li>
+        <li><a href="/scenario-5">Sports technology in France</a></li>
         <br/>
         <li><a href="/scenario-6">Sell your products and services overseas</a></li>
         <br/>
